--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     "require": {
         "php": "^5.5.9|^7.0",
 
-        "doctrine/orm": "~2.3",
+        "doctrine/orm": "^2.4.8,<2.5",
         "sylius/registry": "0.16.*",
         "sylius/resource": "0.16.*"
     },
     "require-dev": {
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "^2.4"
     },
     "config": {
         "bin-dir": "bin"
