--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "psr-4": { "Sylius\\Component\\Promotion\\spec\\": "spec/" }
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "0.18-dev"
