[Composer] Using consistent versioning for Sylius packages (^0.18 instead of 0.18.* or 0.18.*@dev or ^0.18.0)

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "php": "^5.5.9|^7.0",
 
         "doctrine/orm": "^2.4.8,<2.5",
-        "sylius/registry": "0.18.*",
-        "sylius/resource": "0.18.*"
+        "sylius/registry": "^0.18",
+        "sylius/resource": "^0.18"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4"
