--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php": "^8.0",
         "doctrine/orm": "^2.13",
         "sylius/registry": "^1.5",
-        "sylius/resource": "^1.9 || ^1.10@alpha"
+        "sylius/resource": "^1.9"
     },
     "require-dev": {
         "phpspec/phpspec": "^7.2"
