Add a conflict for doctrine/orm:2.15.2

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
     "require-dev": {
         "phpspec/phpspec": "^7.2"
     },
+    "conflict": {
+        "doctrine/orm": "2.15.2"
+    },
     "config": {
         "allow-plugins": {
             "symfony/flex": true
